--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CW/CW_CWFW.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CW/CW_CWFW.cshtml
@@ -29,7 +29,7 @@
                     </div>
                 </div>
             </div>
-            <div id="divCWFWLBTip" class="Warn" style="z-index: 997; position: relative;"></div>
+            <div id="divCWFWLBTip" class="Warn" style="z-index: 998; position: relative;"></div>
         </div>
         <div id="divJG" class="div_row" style="z-index: 997;">
             <div class="div_row_left" style="margin-left: 128px;">
@@ -42,7 +42,33 @@
                         <span class="spaninput_fontcolor">元</span>
                     </span>
             </div>
-            <div id="divJGTip" class="Warn" style="z-index: 997; position: relative;"></div>
+            <div id="divJGTip" class="Warn" style="z-index: 996; position: relative;"></div>
+        </div>
+        <div id="divSZQY" class="div_row" style="z-index: 995;">
+            <div class="div_row_left">
+                <span class="span_required">*</span>
+                <span class="spanFWCZ">所在区域</span>
+            </div>
+            <div class="div_row_right">
+                <div id="divQYText" class="div_select_out SRK">
+                    <div id="divQYSpan" class="div_select_in" style="border: none; margin-top: 6px;">
+                        <input type="hidden" id="QYCode" />
+                        <span id="spanQY" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择区域</span>
+                        <div class="span_select_arrow"></div>
+                    </div>
+                    <div id="divQY" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
+                    </div>
+                </div>
+                <div id="divDDText" class="div_select_out SRK">
+                    <div id="divDDSpan" class="div_select_in" style="border: none; margin-top: 6px;">
+                        <span id="spanDD" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择地段</span>
+                        <div class="span_select_arrow"></div>
+                    </div>
+                    <div id="divDD" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
+                    </div>
+                </div>
+            </div>
+            <div id="divSZQYTip" class="Warn" style="z-index: 994; position: relative;"></div>
         </div>
         <div id="divXXXX" class="div_split" style="display: block; text-align: left;">
             <span class="span_split">详细信息</span>
@@ -58,7 +84,7 @@
                 <div id="divBTTip"></div>
             </div>
         </div>
-        <div id="divBCMS" class="div_row" style="height: 253px;">
+        <div id="divBCMS" class="div_row" style="height: 253px; z-index: 993;">
             <div class="div_row_left" style="height: 170px; vertical-align: top;">
                 <span class="span_required" style="vertical-align: top">*</span>
                 <span id="spanBCMS" style="vertical-align: top">补充描述</span>
