--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CW/CW_HNYC.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CW/CW_HNYC.cshtml
@@ -67,6 +67,32 @@
             </div>
             <div id="divJGTip" class="Warn" style="z-index: 998; position: relative;"></div>
         </div>
+        <div id="divSZQY" class="div_row" style="z-index: 985;">
+            <div class="div_row_left">
+                <span class="span_required">*</span>
+                <span class="spanFWCZ">所在区域</span>
+            </div>
+            <div class="div_row_right">
+                <div id="divQYText" class="div_select_out SRK">
+                    <div id="divQYSpan" class="div_select_in" style="border: none; margin-top: 6px;">
+                        <input type="hidden" id="QYCode" />
+                        <span id="spanQY" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择区域</span>
+                        <div class="span_select_arrow"></div>
+                    </div>
+                    <div id="divQY" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
+                    </div>
+                </div>
+                <div id="divDDText" class="div_select_out SRK">
+                    <div id="divDDSpan" class="div_select_in" style="border: none; margin-top: 6px;">
+                        <span id="spanDD" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择地段</span>
+                        <div class="span_select_arrow"></div>
+                    </div>
+                    <div id="divDD" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
+                    </div>
+                </div>
+            </div>
+            <div id="divSZQYTip" class="Warn" style="z-index: 984; position: relative;"></div>
+        </div>
         <div id="divXXXX" class="div_split" style="display: block; text-align: left;">
             <span class="span_split">详细信息</span>
             <em class="em_split"></em>
