--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CW/CW_CWZSLY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CW/CW_CWZSLY.cshtml
@@ -64,10 +64,10 @@
             </div>
             <div class="div_row_right">
                 <input id="BT" maxlength="50" column="BT" class="input_input SRK" type="text" placeholder="吸引人的标题可让更多的人看您的信息喔"/>
-                <div id="divBTTip"></div>
+                <div id="divBTTip" style="z-index: 996;"></div>
             </div>
         </div>
-        <div id="divBCMS" class="div_row" style="height: 253px; z-index: 996;">
+        <div id="divBCMS" class="div_row" style="height: 253px; z-index: 995;">
             <div class="div_row_left" style="height: 170px; vertical-align: top;">
                 <span class="span_required" style="vertical-align: top">*</span>
                 <span id="spanBCMS" style="vertical-align: top">补充描述</span>
