--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ES/ES_SJSM_ESSJ.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ES/ES_SJSM_ESSJ.cshtml
@@ -20,10 +20,10 @@
             </div>
             <div class="div_row_right">
                 <div class="div_radio" id="div_gq_sjzr">
-                    <img class="img_radio" id="img_gq_sjzr"/><label class="label_radio">商家转让</label>
+                    <img class="img_radio" id="img_gq_sjzr" /><label class="label_radio">商家转让</label>
                 </div>
                 <div class="div_radio" id="div_gq_sjhs">
-                    <img class="img_radio" id="img_gq_sjhs"/><label class="label_radio">商家回收</label>
+                    <img class="img_radio" id="img_gq_sjhs" /><label class="label_radio">商家回收</label>
                 </div>
             </div>
             <div id="divGQTip" class="Warn" style="z-index: 996; position: relative;"></div>
@@ -36,7 +36,7 @@
             <div class="div_row_right">
                 <div id="divSJPPText" class="div_select_out SRK" style="z-index: 997;">
                     <div id="divSJPPSpan" class="div_select_in" style="border: none; margin-top: 6px;">
-                        <input id="PPID" type="hidden"/>
+                        <input id="PPID" type="hidden" />
                         <span id="spanSJPP" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择品牌</span>
                         <div class="span_select_arrow"></div>
                     </div>
@@ -61,10 +61,10 @@
             </div>
             <div class="div_row_right">
                 <div class="div_radio" id="div_syqk_syg">
-                    <img class="img_radio" id="img_syqk_syg"/><label class="label_radio">使用过</label>
+                    <img class="img_radio" id="img_syqk_syg" /><label class="label_radio">使用过</label>
                 </div>
                 <div class="div_radio" id="div_syqk_qxwcf">
-                    <img class="img_radio" id="img_syqk_qxwcf"/><label class="label_radio">全新未拆封</label>
+                    <img class="img_radio" id="img_syqk_qxwcf" /><label class="label_radio">全新未拆封</label>
                 </div>
             </div>
             <div id="divSYQKTip" class="Warn" style="z-index: 996; position: relative;"></div>
@@ -76,11 +76,20 @@
             </div>
             <div class="div_row_right">
                 <span id="spanJG" class="span_spaninput SRK" style="display: inline-block;">
-                        <input class="input_spaninput spaninput_fontcolor" id="JG" maxlength="9" column="JG" type="text" />
-                        <span class="spaninput_fontcolor">元</span>
-                    </span>
+                    <input class="input_spaninput spaninput_fontcolor" id="JG" maxlength="9" column="JG" type="text" />
+                    <span class="spaninput_fontcolor">元</span>
+                </span>
             </div>
             <div id="divJGTip" class="Warn" style="z-index: 996; position: relative;"></div>
+        </div>
+        <div id="divTSBQ" class="div_row" style="z-index: 996; height: 280px;">
+            <div class="div_row_left">
+                <span class="span_required">*</span>
+                <span id="spanTSBQ">特色标签</span>
+            </div>
+            <div id="divTSBQText" class="div_row_right" style="position: relative;">
+            </div>
+            <div id="divTSBQTip" class="Warn" style="z-index: 999; position: relative;"></div>
         </div>
         <div id="divSZQY" class="div_row" style="z-index: 997;">
             <div class="div_row_left" style="margin-left: 102px;">
@@ -90,7 +99,7 @@
             <div class="div_row_right">
                 <div id="divQYText" class="div_select_out SRK" style="z-index: 997; position: relative;">
                     <div id="divQYSpan" class="div_select_in" style="border: none; margin-top: 6px;">
-                        <input type="hidden" id="QYCode"/>
+                        <input type="hidden" id="QYCode" />
                         <span id="spanQY" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择区域</span>
                         <div class="span_select_arrow"></div>
                     </div>
@@ -118,7 +127,7 @@
                 <span id="spanFYBT">标题</span>
             </div>
             <div class="div_row_right">
-                <input id="BT" maxlength="50" column="BT" class="input_input SRK" type="text" placeholder="吸引人的标题可让更多的人看您的信息喔"/>
+                <input id="BT" maxlength="50" column="BT" class="input_input SRK" type="text" placeholder="吸引人的标题可让更多的人看您的信息喔" />
                 <div id="divBTTip"></div>
             </div>
         </div>
@@ -129,7 +138,7 @@
             </div>
             <div class="div_row_right">
                 <script id="BCMS" type="text/plain" style="width: 594px; height: 200px; display: inline-block;">
-                    </script>
+                </script>
                 <div id="divBCMSTip" class="Warn"></div>
             </div>
         </div>
@@ -141,7 +150,7 @@
             <div class="div_row_right">
                 <div id="div_upload" class="div_upload">
                     <form action="" enctype="multipart/form-data" id="myform" method="post">
-                        <input id="input_upload" unselectable="on" type="file" multiple="multiple" class="file"/>
+                        <input id="input_upload" unselectable="on" type="file" multiple="multiple" class="file" />
                     </form>
                 </div>
                 <div style="margin-left: 214px; font-size: 14px; color: #999999;">
@@ -176,7 +185,7 @@
                 <span id="spanLXDH">联系人</span>
             </div>
             <div class="div_row_right">
-                <input id="LXR" column="LXR" class="input_input SRK" type="text" placeholder="请输入联系人"/>
+                <input id="LXR" column="LXR" class="input_input SRK" type="text" placeholder="请输入联系人" />
                 <div id="divLXRTip"></div>
             </div>
         </div>
@@ -186,7 +195,7 @@
                 <span id="spanLXDH">联系电话</span>
             </div>
             <div class="div_row_right">
-                <input id="LXDH" maxlength="11" column="LXDH" class="input_input SRK" type="text" placeholder="请输入联系电话"/>
+                <input id="LXDH" maxlength="11" column="LXDH" class="input_input SRK" type="text" placeholder="请输入联系电话" />
                 <div id="divLXDHTip"></div>
             </div>
         </div>
@@ -196,11 +205,11 @@
                 <span id="spanQQ">QQ</span>
             </div>
             <div class="div_row_right">
-                <input column="QQ" class="input_input SRK" type="text" placeholder="请输入QQ"/>
+                <input column="QQ" class="input_input SRK" type="text" placeholder="请输入QQ" />
             </div>
         </div>
         <div id="divFB" class="div_split" style="display: block; text-align: center; margin-top: 40px;">
-            <input type="button" class="btn btn-info input_text" style="height: 50px; font-size: 24px;" id="btnFB" value="发布"/>
+            <input type="button" class="btn btn-info input_text" style="height: 50px; font-size: 24px;" id="btnFB" value="发布" />
         </div>
     </div>
 }
