--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ES/ES_JDJJBG_ESJJ.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ES/ES_JDJJBG_ESJJ.cshtml
@@ -26,9 +26,9 @@
                 <img class="img_radio" id="img_gq_sjhs"/><label class="label_radio">商家回收</label>
             </div>
         </div>
-        <div id="divGQTip" class="Warn" style="z-index: 996; position: relative;"></div>
+        <div id="divGQTip" class="Warn" style="z-index: 999; position: relative;"></div>
     </div>
-    <div id="divESJJLB" class="div_row" style="z-index: 999">
+    <div id="divESJJLB" class="div_row" style="z-index: 998">
         <div class="div_row_left" style="margin-left: 128px;">
             <span class="span_required">*</span>
             <span class="spanFWCZ">类别</span>
@@ -51,9 +51,9 @@
                 </div>
             </div>
         </div>
-        <div id="divESJJLBTip" class="Warn" style="z-index: 996; position: relative;"></div>
+        <div id="divESJJLBTip" class="Warn" style="z-index: 997; position: relative;"></div>
     </div>
-    <div id="divCXXCS" class="div_row" style="z-index: 998; display: none;">
+    <div id="divCXXCS" class="div_row" style="z-index: 996; display: none;">
         <div class="div_row_left" style="margin-left: 160px;">
             <span class="span_required">&nbsp;</span>
             <span class="spanFWCZ"></span>
@@ -69,7 +69,7 @@
             </div>
         </div>
     </div>
-    <div id="divCDXXCS" class="div_row" style="z-index: 997; display: none;">
+    <div id="divCDXXCS" class="div_row" style="z-index: 995; display: none;">
         <div class="div_row_left" style="margin-left: 160px;">
             <span class="span_required">&nbsp;</span>
             <span class="spanFWCZ"></span>
@@ -85,13 +85,13 @@
             </div>
         </div>
     </div>
-    <div id="divXJCD" class="div_row" style="z-index: 993;">
+    <div id="divXJCD" class="div_row" style="z-index: 994;">
         <div class="div_row_left" style="margin-left: 128px;">
             <span class="span_required">*</span>
             <span class="spanFWCZ">新旧</span>
         </div>
         <div class="div_row_right">
-            <div id="divXJText" class="div_select_out SRK" style="z-index: 997;">
+            <div id="divXJText" class="div_select_out SRK" style="z-index: 993;">
                 <div id="divXJSpan" class="div_select_in" style="border: none; margin-top: 6px;">
                     <span id="spanXJ" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择新旧</span>
                     <div class="span_select_arrow"></div>
@@ -100,9 +100,9 @@
                 </div>
             </div>
         </div>
-        <div id="divXJCDTip" class="Warn" style="z-index: 996; position: relative;"></div>
+        <div id="divXJCDTip" class="Warn" style="z-index: 992; position: relative;"></div>
     </div>
-    <div id="divJG" class="div_row" style="z-index: 992;">
+    <div id="divJG" class="div_row" style="z-index: 991;">
         <div class="div_row_left" style="margin-left: 102px;">
             <span class="span_required">*</span>
             <span class="spanFWCZ">转让价格</span>
@@ -113,15 +113,15 @@
                         <span class="spaninput_fontcolor">元</span>
                     </span>
         </div>
-        <div id="divJGTip" class="Warn" style="z-index: 992; position: relative;"></div>
+        <div id="divJGTip" class="Warn" style="z-index: 990; position: relative;"></div>
     </div>
-    <div id="divSZQY" class="div_row" style="z-index: 991;">
+    <div id="divSZQY" class="div_row" style="z-index: 989;">
         <div class="div_row_left" style="margin-left: 102px;">
             <span class="span_required">*</span>
             <span class="spanFWCZ">交易地点</span>
         </div>
         <div class="div_row_right">
-            <div id="divQYText" class="div_select_out SRK" style="z-index: 997;">
+            <div id="divQYText" class="div_select_out SRK" style="z-index: 988;">
                 <div id="divQYSpan" class="div_select_in" style="border: none; margin-top: 6px;">
                     <input type="hidden" id="QYCode"/>
                     <span id="spanQY" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择区域</span>
@@ -130,16 +130,16 @@
                 <div id="divQY" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
                 </div>
             </div>
-            <div id="divDDText" class="div_select_out SRK" style="z-index: 997;">
+            <div id="divDDText" class="div_select_out SRK" style="z-index: 987;">
                 <div id="divDDSpan" class="div_select_in" style="border: none; margin-top: 6px;">
                     <span id="spanDD" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择地段</span>
                     <div class="span_select_arrow"></div>
                 </div>
-                <div id="divDD" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
+                <div id="divDD" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px; z-index: 996;">
                 </div>
             </div>
         </div>
-        <div id="divSZQYTip" class="Warn" style="z-index: 996; position: relative;"></div>
+        <div id="divSZQYTip" class="Warn" style="z-index: 986; position: relative;"></div>
     </div>
     <div id="divXXXX" class="div_split" style="display: block; text-align: left;">
         <span class="span_split">详细信息</span>
@@ -155,14 +155,13 @@
             <div id="divBTTip"></div>
         </div>
     </div>
-    <div id="divBCMS" class="div_row" style="height: 253px;">
+    <div id="divBCMS" class="div_row" style="height: 253px; z-index: 985;">
         <div class="div_row_left" style="height: 170px; vertical-align: top;">
             <span class="span_required" style="vertical-align: top">*</span>
             <span id="spanBCMS" style="vertical-align: top">补充描述</span>
         </div>
         <div class="div_row_right">
-            <script id="BCMS" type="text/plain" style="width: 594px; height: 200px; display: inline-block;">
-                    </script>
+            <script id="BCMS" type="text/plain" style="width: 594px; height: 200px; display: inline-block;"></script>
             <div id="divBCMSTip" class="Warn"></div>
         </div>
     </div>
