--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/Other/LBXZ.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/Other/LBXZ.css
@@ -1,77 +1,16 @@
-﻿.LBFirst {
-    font-size: 14px;
-    width: 150px;
-    font-weight: bold;
-}
+﻿body {width: 100%;height: 100%;;font-family: 微软雅黑;background-color: #eeeff1;}
 
-.LB {
-    cursor: pointer;
-    font-size: 14px;
-    width: 150px;
-    height: 60px;
-    vertical-align: middle;
-}
+.div_head {margin-top: 20px;z-index: 1001;position: relative;width: 940px;padding-left: 20px;padding-top: 20px;background-color: #ffffff;border-top: 1px solid #cccccc;border-left: 1px solid #cccccc;border-right: 1px solid #cccccc;border-top-left-radius:4px;border-top-right-radius:4px;}
+.div_head .table_head {margin-bottom: 0 !important;}
 
-    .LB:hover {
-        color: #5bc0de;
-    }
+.LBFirst {font-size: 14px;width: 150px;font-weight: bold;}
+.LB {cursor: pointer;font-size: 14px;width: 150px;height: 60px;vertical-align: middle;}
+.LB:hover {color: #5bc0de;}
 
-.divLB {
-    width: 900px;
-    text-align: center;
-    padding-top: 2px;
-    font-size: 15px;
-    margin-left: 10px;
-}
 
-.DLText {
-    background-color: #5bc0de;
-    font-size: 14px;
-    padding-top: 3px;
-    color: white;
-    float: left;
-    height: 28px;
-    width: 180px;
-}
+.trXL {border-bottom: 1px #f1f1f1 solid;}
 
-.trXL {
-    border-bottom: 1px #f1f1f1 solid;
-}
-
-body {
-    width: 100%;
-    height: 100%;;
-    font-family: 微软雅黑;
-    background-color: #eeeff1;
-}
-
-.div_head {
-    margin-top: 20px;
-    z-index: 1001;
-    position: relative;
-    width: 940px;
-    padding-left: 20px;
-    padding-top: 20px;
-    background-color: #ffffff;
-    border-top: 1px solid #cccccc;
-    border-left: 1px solid #cccccc;
-    border-right: 1px solid #cccccc;
-    border-top-left-radius:4px;
-    border-top-right-radius:4px;
-}
-
-.table_head {
-    margin-bottom: 0 !important;
-}
-
-.div_content {
-    width: 940px;
-    padding-left: 20px;
-    padding-top: 40px;
-    background-color: #ffffff;
-    border-bottom: 1px solid #cccccc;
-    border-left: 1px solid #cccccc;
-    border-right: 1px solid #cccccc;
-    border-bottom-left-radius:4px;
-    border-bottom-right-radius:4px;
-}
+.div_content {width: 940px;height: auto;padding-left: 20px;padding-top: 40px;background-color: #ffffff;border-bottom: 1px solid #cccccc;border-left: 1px solid #cccccc;border-right: 1px solid #cccccc;border-bottom-left-radius:4px;border-bottom-right-radius:4px;}
+.div_content .div_second{display: block; width: 900px; padding-top: 50px;}
+.div_content .divLB {width: 900px;display: block;text-align: center;padding-top: 2px;font-size: 15px;margin-left: 10px;}
+.div_content .divLB .DLText {background-color: #5bc0de;font-size: 14px;padding-top: 3px;color: white;float: left;height: 28px;width: 180px;}
