--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/LBXZ/LBXZ.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/LBXZ/LBXZ.cshtml
@@ -15,70 +15,68 @@
     <link href="@Url.Content("~/Areas/Business/Css/Common/XZQ.css" )" rel="stylesheet" />
 </head>
 
-<body style="width: 100%; height: 100%; background-color: #eeeff1">
-    <div>
-        <div id="divTop" class="div_top">
-            <div class="div_top_left">
-                <span class="span_dqxzq" id="span_content_info_xzq">@ViewData["XZQ"]</span>
-                [<span class="span_qhcs" id="span_content_info_qhcs">切换城市</span>]
-            </div>
-            <div id="div_XZQ" class="div_dropdown">
-            </div>
-            <div class="div_top_right">
-                <span id="span_dl" class="span_top_right">
-                    登录
-                </span>
-                <span class="span_top_right_fg">/</span>
-                <span id="span_zc" class="span_top_right">
-                    注册
-                </span>
-                <span class="span_top_right_split"></span>
-                <span id="span_grzx" class="span_top_right">
-                    个人中心
-                </span>
-                <span class="span_top_right_split"></span>
-                <span id="span_bzzx" class="span_top_right">
-                    帮助中心
-                </span>
-            </div>
+<body>
+    <div id="divTop" class="div_top">
+        <div class="div_top_left">
+            <span class="span_dqxzq" id="span_content_info_xzq">@ViewData["XZQ"]</span>
+            [<span class="span_qhcs" id="span_content_info_qhcs">切换城市</span>]
         </div>
-        <div id="divLBHead" class="div_head">
-            <table class="table_head" style="width: 100%; text-align: center;">
-                <tr>
-                    <td class="headtd">
-                        <div style="width: 960px;">
-                            <div class="divstep" id="divXZDL">
-                                <span class="spanstep" id="spanXZDL">1.选择大类</span>
-                                <em class="emstep" id="emXZDL"></em>
-                            </div>
-                            <div class="divstep" id="divXZXL">
-                                <span class="spanstep" id="spanXZXL">2.选择小类</span>
-                                <em class="emstep" id="emXZXL"></em>
-                            </div>
-                            <div class="divstep" id="divFBXX">
-                                <span class="spanstep" id="spanFBXX">3.发布信息</span>
-                                <em class="emstep" id="emFBXX"></em>
-                            </div>
+        <div id="div_XZQ" class="div_dropdown">
+        </div>
+        <div class="div_top_right">
+            <span id="span_dl" class="span_top_right">
+                登录
+            </span>
+            <span class="span_top_right_fg">/</span>
+            <span id="span_zc" class="span_top_right">
+                注册
+            </span>
+            <span class="span_top_right_split"></span>
+            <span id="span_grzx" class="span_top_right">
+                个人中心
+            </span>
+            <span class="span_top_right_split"></span>
+            <span id="span_bzzx" class="span_top_right">
+                帮助中心
+            </span>
+        </div>
+    </div>
+    <div id="divLBHead" class="div_head">
+        <table class="table_head" style="width: 100%; text-align: center;">
+            <tr>
+                <td class="headtd">
+                    <div style="width: 960px;">
+                        <div class="divstep" id="divXZDL">
+                            <span class="spanstep" id="spanXZDL">1.选择大类</span>
+                            <em class="emstep" id="emXZDL"></em>
                         </div>
-                    </td>
-                </tr>
-            </table>
+                        <div class="divstep" id="divXZXL">
+                            <span class="spanstep" id="spanXZXL">2.选择小类</span>
+                            <em class="emstep" id="emXZXL"></em>
+                        </div>
+                        <div class="divstep" id="divFBXX">
+                            <span class="spanstep" id="spanFBXX">3.发布信息</span>
+                            <em class="emstep" id="emFBXX"></em>
+                        </div>
+                    </div>
+                </td>
+            </tr>
+        </table>
+    </div>
+    <div id="myTabContent" class="div_content">
+        <div id="divDL" class="divLB">
+            <div id="divDLText" class="DLText">1.选择大类</div>
+            <img style="width: 20px; height: 28px; float: left;" src="@Url.Content("~/Areas/Business/Css/images/righttip.png")" />
         </div>
-        <div id="myTabContent" class="div_content">
-            <div id="divDL" class="divLB" style="display: block; ">
-                <div id="divDLText" class="DLText">1.选择大类</div>
-                <img style="width: 20px; height: 28px; float: left;" src="@Url.Content("~/Areas/Business/Css/images/righttip.png")" />
-            </div>
-            <div id="divFirst" style="display: block; width: 900px; padding-top: 50px;">
-                <table id="tableDL" class="table" style="width: 900px;"></table>
-            </div>
-            <div id="divXL" class="divLB" style="display: none; ">
-                <div id="divXLText" class="DLText">2.选择小类</div>
-                <img style="width: 20px; height: 28px; float: left;" src="@Url.Content("~/Areas/Business/Css/images/righttip.png")" />
-            </div>
-            <div id="divSecond" style="display: block; width: 900px; padding-top: 50px; ">
-                <table id="tableXL" class="table" style="width: 900px;"></table>
-            </div>
+        <div id="divFirst" style="display: block; width: 900px; padding-top: 50px;">
+            <table id="tableDL" class="table" style="width: 900px;"></table>
+        </div>
+        <div id="divXL" class="divLB" style="display: none;">
+            <div id="divXLText" class="DLText">2.选择小类</div>
+            <img style="width: 20px; height: 28px; float: left;" src="@Url.Content("~/Areas/Business/Css/images/righttip.png")" />
+        </div>
+        <div id="divSecond" class="div_second">
+            <table id="tableXL" class="table" style="width: 900px;"></table>
         </div>
     </div>
 </body>
