--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ESCX/ESCX_SJSM_ESSJ.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ESCX/ESCX_SJSM_ESSJ.cshtml
@@ -15,7 +15,7 @@
         <div id="div_condition_body_PP" class="div_condition_body"></div>
         <div id="div_condition_body_XH" class="div_condition_body" style="padding-top: 0;"></div>
         <div id="div_condition_body_JG" class="div_condition_body" style="padding-top: 0;"></div>
-        <div id="div_condition_body_DQ" class="div_condition_body" style="padding-top: 0;"></div>
+        <div id="div_condition_body_QY" class="div_condition_body" style="padding-top: 0;"></div>
     </div>
     <div id="divConditionSelect" class="div_condition_select">
         <ul id="ul_condition_select" class="ul_condition_select">
