--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ESCX/ESCX_SJSM_PBDN.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ESCX/ESCX_SJSM_PBDN.cshtml
@@ -12,16 +12,17 @@
     <div id="divNav" class="div_nav">
     </div>
     <div id="divCondition" class="div_condition">
-        <div id="div_condition_body" class="div_condition_body">
-
-        </div>
+        <div id="div_condition_body_PP" class="div_condition_body" style="padding-top: 20px;"></div>
+        <div id="div_condition_body_XH" class="div_condition_body"></div>
+        <div id="div_condition_body_JG" class="div_condition_body"></div>
+        <div id="div_condition_body_QY" class="div_condition_body"></div>
     </div>
     <div id="divConditionSelect" class="div_condition_select">
         <ul id="ul_condition_select" class="ul_condition_select">
             <li class="li_condition_select_first">筛选条件</li>
         </ul>
     </div>
-    <div id="divBody" class="div_body"> 
+    <div id="divBody" class="div_body">
         <ul class="ul_body_head">
             <li id="li_body_head_first" class="li_body_head"></li>
             <li class="li_body_head">个人</li>
