--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ES/ES_PWKQ_XFKGWQ.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ES/ES_PWKQ_XFKGWQ.cshtml
@@ -1,12 +1,12 @@
 ﻿@{
-    ViewBag.Title = "PWKQ_XFKGWQ";
+    ViewBag.Title = "ES_PWKQ_XFKGWQ";
     Layout = "~/Areas/Business/Views/Shared/HTFB.cshtml";
 }
 @section Section_Head {
-    <link href="@Url.Content("~/Areas/Business/Css/HTFB/PWKQ/PWKQ_XFKGWQ.css")" rel="stylesheet" />
+    <link href="@Url.Content("~/Areas/Business/Css/HTFB/ES/ES_PWKQ_XFKGWQ.css")" rel="stylesheet" />
     <link href="@Url.Content("~/Areas/Business/Scripts/jquery-ui-1.12.1.custom/jquery-ui.min.css")" rel="stylesheet" />
-    <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/HTFB/PWKQ/PWKQ_XFKGWQ.js")"></script>
-    <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/HTFB/PWKQ/PWKQ_XFKGWQYZ.js")"></script>
+    <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/HTFB/ES/ES_PWKQ_XFKGWQ.js")"></script>
+    <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/HTFB/ES/ES_PWKQ_XFKGWQYZ.js")"></script>
     <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/jquery-ui-1.12.1.custom/jquery-ui.min.js")"></script>
     <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/jquery-ui-1.12.1.custom/jquery.ui.datepicker-zh-CN.js")"></script>
 }
