--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC/FC_XZL.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC/FC_XZL.cshtml
@@ -28,7 +28,7 @@
             </div>
             <div id="divGQTip" class="Warn" style="z-index: 996; position: relative;"></div>
         </div>
-        <div id="divXZLLX" class="div_row" style="z-index: 999">
+        <div id="divLX" class="div_row" style="z-index: 999">
             <div class="div_row_left" style="margin-left: 128px;">
                 <span class="span_required">*</span>
                 <span class="spanFWCZ">类型</span>
@@ -41,7 +41,7 @@
                     <img class="img_radio" id="img_gq_swzx" /><label class="label_radio">商务中心</label>
                 </div>
             </div>
-            <div id="divXZLLXTip" class="Warn" style="z-index: 996; position: relative;"></div>
+            <div id="divLXTip" class="Warn" style="z-index: 996; position: relative;"></div>
         </div>
         <div id="divKZCGS" class="div_row" style="z-index: 998">
             <div class="div_row_left" style="margin-left: 86px;">
